# flexicon

./: Cargo.toml  README.md
src/: lib.rs
src/adaptive/: mod.rs  namedmap.rs
