# flexicon/Cargo.toml
[package]
name = "flexicon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Arcella Team"]
description = "Adaptive configuration toolkit: let your data structures adapt to the user, not the other way around."
repository = "https://github.com/ArcellaTeam/flexicon"
keywords = ["config", "serde", "adaptive", "manifest", "embeddable"]
categories = ["config", "data-structures", "parsing"]
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
toml = "0.9.8"

[features]
default = ["serde"]
serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json"]
